Final updates after Galina's comments

--- a/Scientific_Writing_Course/Assignment5_draft_paper.tex
+++ b/Scientific_Writing_Course/Assignment5_draft_paper.tex
@@ -137,7 +137,7 @@ This approach ensured that the amount of emitted reactive carbon was same in eac
 
 \section{Results and Discussion}
 
-\subsection[Sensitivity of O3 Time Series and Ox Production Budgets]{Sensitivity of \ce{O3} Time Series and \ce{O_x} Production Budgets} \label{ss:o3}
+\subsection[Sensitivity of O3 and Ox Production Budgets]{Sensitivity of \ce{O3} and \ce{O_x} Production Budgets} \label{ss:o3}
 \begin{figure}
     \centering
     \caption{Differences in the time series of \ce{O3} mixing ratios for each solvent sector EI using each chemical mechanism.}
